cart page alignment again fixed in mobile view, started login page edit

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -80,7 +80,7 @@ input::-webkit-inner-spin-button {
     width: 100%;
 }
 .col-2, .col{
-    padding: 0 1vh;
+    padding: 0 0vh;
 }
 a{
     padding: 0 1vh;
