--- a/public/css/credential.styles.css
+++ b/public/css/credential.styles.css
@@ -34,7 +34,7 @@ html {
 
 .credential-wrapper {
   width: 100%;
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 11rem 1rem;
   background: #eeeeee;
   display: -webkit-box;
